src/styles/scss/main.scss
$sidebar-color: #111;
$background-color: #fff;
$link-active-color: #004c7f;
$link-hover-color: #0099ff;

$top-bar-height: 250px;
$logo-padding: 20px;

body {
  background-color: $background-color;
  margin: 0;
  font-family: sans-serif;
}

header {
  .logo img {
    display: block;
    margin: auto;
    height: $top-bar-height - 2 * $logo-padding;
    padding: $logo-padding;
  }

  nav {
    display: flex;
    flex-direction: row;
    background-color: $sidebar-color;

    a {
      flex: 1;

      font-size: 1em;
      font-weight: bold;
      text-decoration: none;
      text-align: center;
      padding: 1em;

      color: $background-color;
    }
    a.active {
      background-color: $link-active-color;
    }
    a:hover {
      background-color: $link-hover-color;
    }
  }

  .spacer {
    background-color: $sidebar-color;
    height: 0px;
  }
}

.mainImage {
  position: relative;
  text-align: center;

  img {
    width: 100%;
    height: 500px;
    object-fit: cover;
  }

  h1 {
    font-size: 4em;
    padding: 0.3em;
    margin: auto;

    color: $background-color;
    background-color: rgba($color: $sidebar-color, $alpha: 0.5);
    border-radius: 0.5em;

    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
  }
}

main {
  padding: 1em;

  p {
    text-indent: 1em;
    font-size: 1.5em;
  }
}

footer {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  background-color: $sidebar-color;
  color: $background-color;
  font-size: 8pt;
  padding: 1em;
}

// * Mobile
@media screen and (max-width: 800px) {
  header {
    .logo img {
      // Todo Test logo size
      height: 150px;
      padding: $logo-padding;
    }

    nav {
      flex-direction: column;
    }
  }

  footer {
    flex-direction: column;
    align-items: center;
    .phone {
      order: -1;
    }
    .address {
      order: 1;
    }
  }

  .mainImage {
    img {
      height: 100%;
    }

    h1 {
      white-space: nowrap;
      font-size: 2.5em;
    }
  }
}

@supports (display: grid) {
  // * Mobile + Grid
  @media screen and (max-width: 800px) {
    header nav {
      display: grid;
      grid-template-columns: repeat(2, 1fr);
    }
  }

  // * Desktop + grid
  @media screen and (min-width: 800px) {
    header {
      grid-area: header;
      display: flex;
      flex-direction: column;

      nav {
        flex-direction: column;

        a {
          font-size: 1.2em;
        }
      }

      .spacer {
        flex: 1;
      }
    }

    .mainImage {
      grid-area: mainImage;

      img {
        width: 100%;
        height: 100%;
        object-fit: cover;
      }
    }

    main {
      grid-area: main;
    }

    footer {
      grid-area: footer;
    }

    .site {
      display: grid;
      min-height: fit-content;
      height: 100vh;
      grid-template-columns: auto 1fr;
      grid-template-rows: minmax($top-bar-height, 1fr) auto max-content;
      grid-column-gap: 0em;
      grid-template-areas:
        "header mainImage"
        "header main"
        "footer footer";
    }
  }
}

